ubuntu-dev-tools (0.128) unstable; urgency=low

  [ Stefano Rivera ]
  * ubuntutools.builder: Detect missing builder and fail early.
  * backportpackage: Backport from local source packages again (LP: #801945)

  [ Julian Taylor ]
  * lp-shell: use ipython shell if available

 -- Stefano Rivera <stefanor@debian.org>  Tue, 16 Aug 2011 10:25:24 +0200

ubuntu-dev-tools (0.127) unstable; urgency=low

  * Move debian-distro-info, distro-info, and ubuntu-distro-info from
    ubuntu-dev-tools into distro-info.

 -- Benjamin Drung <bdrung@debian.org>  Fri, 01 Jul 2011 22:07:18 +0200

ubuntu-dev-tools (0.126) unstable; urgency=low

  [ Evan Broder ]
  * ubuntutools.misc: Add a new "system_distribution_chain", which returns
    a list starting with the current distribution and working its way up
    each distribution's parent.
  * ubuntutools.misc: Add a function to find the distribution that
    used a given release codename.
  * backportpackage, doc/backportpackage.1: Accept codenames from any
    distribution in the parenting chain. Makes it possible to, e.g.,
    backport from Debian. (LP: #703099)
  * ubuntutools.subprocess:
    - New drop-in replacement wrapper module around subprocess that
      backports the restore_signals kwarg and defaults close_fds=True
    - Switch everything previously using subprocess to use
      ubuntutools.subprocess instead (LP: #785854)

  [ Stefano Rivera ]
  * submittodebian: Write a usable .reportbugrc if it doesn't exist.
    (LP: #800429)

  [ Benjamin Drung ]
  * Add experimental to list of Debian distributions.

 -- Benjamin Drung <bdrung@debian.org>  Sat, 25 Jun 2011 16:38:49 +0200

ubuntu-dev-tools (0.125ubuntu1) oneiric; urgency=low

  [ Benjamin Drung ]
  * backportpackage: Use --force-bad-version instead of --allow-lower-version
    (which requires a parameter) for debchange.
  * Adjust EOL date of Ubuntu 9.10 "Karmic Koala".

  [ Stefano Rivera ]
  * ubuntutools.archive: Display any errors rmadison emits, rather than